# approximate_coords

./: README.md  pyproject.toml
approximate_coords/: almanac_chp_6.py  altaz_cirs.py  change_trafo.py  time.py  transform.py
benchmarks/: altaz_to_cirs.py  only_precession.py
tests/: test_altaz_cirs.py  test_only_precession.py  test_time.py
